src/types/tests/snapshots/tgbot__types__tests__chat__restrict_chat_member-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "permissions": {},
  "until_date": 100,
  "user_id": 2
}
