src/types/tests/snapshots/tgbot__types__tests__chat__restrict_chat_member-3.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "permissions": {
    "can_add_web_page_previews": true,
    "can_change_info": true,
    "can_edit_tag": true,
    "can_invite_users": true,
    "can_manage_topics": true,
    "can_pin_messages": true,
    "can_react_to_messages": true,
    "can_send_audios": true,
    "can_send_documents": true,
    "can_send_messages": true,
    "can_send_other_messages": true,
    "can_send_photos": true,
    "can_send_polls": true,
    "can_send_video_notes": true,
    "can_send_videos": true,
    "can_send_voice_notes": true
  },
  "user_id": 2
}
