src/types/tests/snapshots/tgbot__types__tests__chat__restrict_chat_member-5.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "permissions": {
    "can_add_web_page_previews": false,
    "can_send_messages": true,
    "can_send_other_messages": true
  },
  "until_date": 100,
  "use_independent_chat_permissions": true,
  "user_id": 2
}
