src/types/tests/snapshots/tgbot__types__tests__chat__restrict_chat_member-6.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "permissions": {},
  "user_id": 2
}
