src/types/tests/snapshots/tgbot__types__tests__chat__revoke_chat_invite_link.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "invite_link": "example.com/join/chat"
}
