src/types/tests/snapshots/tgbot__types__tests__chat__send_chat_action-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "action": "typing",
  "business_connection_id": "id",
  "chat_id": 1,
  "message_thread_id": 1
}
