src/types/tests/snapshots/tgbot__types__tests__chat__send_chat_action.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "action": "typing",
  "chat_id": 1
}
