src/types/tests/snapshots/tgbot__types__tests__chat__send_chat_join_request_web_app.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_join_request_query_id": "query-id",
  "web_app_url": "https://example.com/"
}
