src/types/tests/snapshots/tgbot__types__tests__chat__set_chat_administrator_custom_title.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "custom_title": "Alpha",
  "user_id": 1
}
