src/types/tests/snapshots/tgbot__types__tests__chat__set_chat_description-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "description": "Description"
}
