src/types/tests/snapshots/tgbot__types__tests__chat__set_chat_member_tag-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "tag": "test",
  "user_id": 1
}
